@@ -9,17 +9,22 @@ describe 'rkhunter' do
         # config is a private class called by init.
         #
         context 'with default parameters' do
-          it { is_expected.to create_exec('propupd').with({
-            :command => 'rkhunter --propupd',
-            :creates => '/var/lib/rkhunter/db/rkhunter.dat',
-            :path    => ['/bin', '/usr/bin']
-          })}
-          it { is_expected.to create_file('/etc/rkhunter.conf').with({
-            :owner => 'root',
-            :group => 'root',
-            :mode  => '0640',
-            :validate_cmd => 'PATH=/sbin:/bin:/usr/sbin:/usr/bin rkhunter -C --configfile %'
-          })}
+          it { is_expected.to create_class('Rkhunter::Propupd').with_stage('simp_finalize')}
+
+          it {
+            is_expected.to create_exec('rkhunter_propupd')
+              .with_command('rkhunter --propupd')
+              .with_creates('/var/lib/rkhunter/db/rkhunter.dat')
+              .with_path(['/bin', '/usr/bin'])
+          }
+
+          it {
+            is_expected.to create_file('/etc/rkhunter.conf')
+              .with_owner('root')
+              .with_group('root')
+              .with_mode('0640')
+              .with_validate_cmd('PATH=/sbin:/bin:/usr/sbin:/usr/bin rkhunter -C --configfile %')
+          }
 
           expected_content = File.read(File.join(File.dirname(__FILE__),'../files/rkhunter_conf.txt'))
           it { is_expected.to create_file('/etc/rkhunter.conf').with_content(expected_content) }
