@@ -3,6 +3,9 @@
 - Added default user_fileprop_files_dirs to cover the puppet apps
 - Added PostgreSQL to the allowed items in /dev/shm for puppetdb
 - Ensure that the initial propupd command runs after the puppet run is complete
+- Added a rkhunter::propupd class to ensure that the first cut of properties is
+  updated after all other items (particularly packages) have completed in the
+  puppet run.
 
 * Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.0.4
 - Removed EL6 support
